--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <div class="name">
                       <label for="name">Tell us your name</label>
                       <input
+                        required
                         name="name"
                         id="name"
                         type=" text"
