--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                       id="message"
                       cols="30"
                       rows="10"
-                      placeholder="Your message here"
+                      placeholder="Your message here..."
                     ></textarea>
                   </div>
                   <div style="margin: 0 auto" class="button">
@@ -77,6 +77,20 @@
         </div>
       </div>
     </section>
+
+    <main>
+      <div class="soat-uz">
+        <div class="container">
+          <div class="clock">
+            <span class="soat">00</span>
+            <span>:</span>
+            <span class="minut">00</span>
+            <span>:</span>
+            <span class="second">00</span>
+          </div>
+        </div>
+      </div>
+    </main>
 
     <script src="./js/main.js"></script>
   </body>
